# Hammig-code

./: CMakeLists.txt  README.md  hamming.cpp  hamming.h  main.cpp
